k8s/helm/ipfs/kibana-ingress-dev2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "kibana-dev2-kibana"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
  name: kibana-ingress
  namespace: dev2
spec:
  tls:
  - hosts:
    - kibana.dev2.kauri.io
    secretName: dev2-kibana-tls
  rules:
    - host: kibana.dev2.kauri.io
      http:
        paths:
          - backend:
              serviceName: ipfs-dev2-ipfs
              servicePort: 5001
            path: /
